refactor(whole project): remove yellow flags from Intellij IDEA